user signup  and otp  verifaction complete

--- a/.env
+++ b/.env
@@ -1,2 +1,10 @@
 REDIS_HOST=127.0.0.1
 REDIS_PORT=6379
+PORT=6000
+
+SMTP_HOST = smtp.gmail.com
+SMTP_PORT = 587 
+SMTP_USER = 'vsv23755@gmail.com'
+SMTP_PASS = xwla jxvp fesf znxe
+
+NODE_ENV = development
