--- a/.env
+++ b/.env
@@ -6,5 +6,7 @@ SMTP_HOST = smtp.gmail.com
 SMTP_PORT = 587 
 SMTP_USER = 'vsv23755@gmail.com'
 SMTP_PASS = xwla jxvp fesf znxe
+ JWT_SECRET=vvs237555
+ JWT_EXPIRY= 15m
 
 NODE_ENV = development
