--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,13 +1,5 @@
 {
   "parser": "@typescript-eslint/parser",
-  "extends": [
-    "airbnb-base",
-    "airbnb-typescript/base"
-  ],
-  "parserOptions": {
-  //  "project": "./backend/tsconfig.json"
-  },
-  "rules": {
-    
-  }
+  "plugins": ["@typescript-eslint"],
+  "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended"]
 }
