--- a/.env
+++ b/.env
@@ -8,5 +8,7 @@ SMTP_USER = 'vsv23755@gmail.com'
 SMTP_PASS = xwla jxvp fesf znxe
  JWT_SECRET=vvs237555
  JWT_EXPIRY= 15m
+ LOG_LEVEL=debug
+
 
 NODE_ENV = development
