--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^8.16.5",
     "nodemailer": "^7.0.5",
     "redis": "^5.6.1",
+    "winston": "^3.17.0",
     "zod": "^4.0.5"
   },
   "devDependencies": {
