--- a/.env
+++ b/.env
@@ -9,6 +9,10 @@ SMTP_PASS = xwla jxvp fesf znxe
  JWT_SECRET=vvs237555
  JWT_EXPIRY= 15m
  LOG_LEVEL=debug
+ADMIN_EMAIL = admin@eventhub.com
+ADMIN_PASSWORD=Admin@1234
+ADMIN_NAME    = SuperAdmin
+
 
 
 NODE_ENV = development
