implement fetching users list with proper data mapping

--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ SMTP_PASS = xwla jxvp fesf znxe
  LOG_LEVEL=debug
 ADMIN_EMAIL = admin@eventhub.com
 ADMIN_PASSWORD=Admin@1234
-ADMIN_NAME    = SuperAdmin
+ADMIN_NAME    = VishnuVS
 
 
 
