--- a/package.json
+++ b/package.json
@@ -6,10 +6,8 @@
     "dev": "ts-node-dev --respawn --transpile-only src/app.ts",
     "build": "tsc",
     "start": "node dist/app.js",
-     "seed:admin": "ts-node src/utils/SeedAdminRunner.ts",
-     "lint": "eslint \"src/**/*.{ts,js}\""
-
-
+    "seed:admin": "ts-node src/utils/SeedAdminRunner.ts",
+    "lint": "eslint \"src/**/*.{ts,js}\""
   },
   "keywords": [],
   "author": "",
@@ -19,6 +17,7 @@
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "ioredis": "^5.6.1",
