--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@aws-sdk/s3-request-presigner": "^3.879.0",
     "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
+    "cloudinary": "^2.7.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
