--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "redis": "^5.6.1",
     "socket.io": "^4.8.1",
     "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0",
     "zod": "^4.1.8"
   },
   "devDependencies": {
