--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "pdfkit": "^0.17.2",
     "redis": "^5.6.1",
     "socket.io": "^4.8.1",
+    "stripe": "^19.3.0",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0",
     "zod": "^4.1.8"
