--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@aws-sdk/s3-request-presigner": "^3.879.0",
     "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
+    "canvas": "^3.2.0",
     "cloudinary": "^2.7.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -31,8 +32,10 @@
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.5",
     "pdfkit": "^0.17.2",
+    "qrcode": "^1.5.4",
     "redis": "^5.6.1",
     "socket.io": "^4.8.1",
+    "streamifier": "^0.1.1",
     "stripe": "^19.3.0",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0",
@@ -47,7 +50,9 @@
     "@types/node": "^24.0.13",
     "@types/nodemailer": "^6.4.17",
     "@types/pdfkit": "^0.17.3",
+    "@types/qrcode": "^1.5.6",
     "@types/socket.io": "^3.0.1",
+    "@types/streamifier": "^0.1.2",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
     "eslint": "^8.57.1",
