--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,19 +1,20 @@
-{
-  "parser": "@typescript-eslint/parser",
-  "plugins": ["@typescript-eslint", "prettier"],
-  "extends": [
-    "eslint:recommended",
-    "plugin:@typescript-eslint/recommended",
-    "plugin:prettier/recommended"
-  ],
-  "rules": {
-    "@typescript-eslint/no-unused-vars": [
-      "error",
-      {
-        "argsIgnorePattern": "^_",
-        "varsIgnorePattern": "^_"
-      }
-    ],
-    "prettier/prettier": "error"
-  }
-}
+// {
+//   "parser": "@typescript-eslint/parser",
+//   "plugins": ["@typescript-eslint", "prettier"],
+//   "extends": [
+//     "eslint:recommended",
+//     "plugin:@typescript-eslint/recommended",
+//     "plugin:prettier/recommended"
+//   ],
+//   "rules": {
+//     "@typescript-eslint/no-unused-vars": [
+//       "error",
+//       {
+//         "argsIgnorePattern": "^_",
+//         "varsIgnorePattern": "^_"
+//       }
+//     ]
+    
+//     // "prettier/prettier": "error"
+//   }
+// }
