--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/app.ts",
-     "format": "prettier --write \"src/**/*.{ts,js,json}\"",
+    "format": "prettier --write \"src/**/*.{ts,js,json}\"",
     "build": "tsc",
     "start": "node dist/app.js",
     "seed:admin": "ts-node src/utils/SeedAdminRunner.ts",
@@ -35,6 +35,7 @@
     "pdfkit": "^0.17.2",
     "qrcode": "^1.5.4",
     "redis": "^5.6.1",
+    "resend": "^6.9.2",
     "socket.io": "^4.8.1",
     "streamifier": "^0.1.1",
     "stripe": "^19.3.0",
